# Objectoriented-Programming-C---Assignment-1

./: main.cpp  menu.cpp
Del_2/: CMakeLists.txt  README.md  ReadMe.md  UML-Diagram - EC.drawio  UML_DIAGRAM.drawio  humidity_sensor.cpp  humidity_sensor.h  main.cpp  measurement.cpp  measurement.h  menu.cpp  menu.h  pressure_sensor.cpp  sensor.cpp  sensor.h  storage.cpp  storage.h  temperature_sensor.cpp  temperature_sensor.h  threshold.h  toFix.txt
Del_2/src/: humidity_sensor.cpp  menu.cpp  pressure_sensor.h  sensor.h  storage.cpp  storage.h  temperature_sensor.cpp  temperature_sensor.h
Flersensorsystem/: README.md  main.cpp  measurement.cpp  measurement.h  menu.cpp  sensor.cpp  sensor.h  storage.cpp  storage.h
